class Cliente:
    def __init__(self) -> None:
        pass
